<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="button_spotifystreamer">Spotify Streamer</string>
    <string name="button_scores_app">Scores App</string>
    <string name="button_library_app">Library App</string>
    <string name="button_build_it_bigger">Build it Bigger</string>
    <string name="button_xyz_reader">XYZ Reader</string>
    <string name="button_capstone_app">Capstone: My own App</string>
</resources>
