<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
     android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sank.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:id="@+id/titleTextView"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_spotifystreamer"
        android:id="@+id/button_spotify_streamer"
        android:layout_below="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="#64b5f6"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_scores_app"
        android:id="@+id/button_scores_app"
        android:layout_below="@+id/button_spotify_streamer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="#42a5f5"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_library_app"
        android:id="@+id/button_library_app"
        android:layout_below="@+id/button_scores_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="#2196f3"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_build_it_bigger"
        android:id="@+id/button_build_it_bigger"
        android:layout_below="@+id/button_library_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="#1e88e5"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_xyz_reader"
        android:id="@+id/button_xyz_reader"
        android:layout_below="@+id/button_build_it_bigger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="#1976d2"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_capstone_app"
        android:id="@+id/button_capstone"
        android:layout_below="@+id/button_xyz_reader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="#1565c0"
        />

</RelativeLayout>
</ScrollView>